# wbpyplot

./: .gitignore  README.md  _quarto.yml  index.md  objects.json  pyproject.toml
docs/: index.html  robots.txt  search.json  sitemap.xml
docs/reference/: example.html  index.html  other-tips.html  wb_plot.html  wbplot-examples.html
reference/: example.qmd  index.qmd  life.expectancy.csv  other-tips.qmd  wb_plot.qmd
src/wbpyplot/: __init__.py
wbpyplot/: __init__.py  axis.py  colors.py  decorator.py  layout.py  legend.py  number_formatting.py  test.py  theme.py
