[project]
name = "wbpyplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zoe Meers", email = "zoe.meers@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
wbpyplot = "wbpyplot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
