[project]
name = "wbpyplot"
version = "0.1.6"
description = "The World Bank data visualization package for `matplotlib` graphs."
readme = "README.md"
authors = [
    { name = "Zoe Meers", email = "zoe.meers@gmail.com" }
]
requires-python = ">=3.9.6"
dependencies = [
    "pyfonts>=1.0.0",
    "cycler",
    "pypalettes",
    "matplotlib",
    "morethemes>=0.3.1",
    "seaborn>=0.13.2",
    "quartodoc",
    "drawarrow",
    "highlight_text",
]

[project.scripts]
wbpyplot = "wbpyplot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
